--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
                 <li>unordered listing</li>
                 <li>things to do today</li>
                     <ul>
-                        <li>subunordered list</li>
+                        <li>read book</li>
                         <li>make breakfast</li>
                         <li>shower</li>
                     </ul>
             </ul>
             <ol>
-                <li>order listing</li>
-                <li>clean the shed</li>
-                <li>go see the doctor</li>
-                    <ul>
-                        <li>take piss test</li>
-                        <li>find out blood pressure</li>
-                    </ul>
+                <li>Organize Closet</li>
+                <li>Clean the shed</li>
+                <li>Visit Dentist website, <a href="http://ardentalmiami.com/"> make appointments</a> for: </li>
+                    <ol>
+                        <li>Tommy</li>
+                        <li>Pamela</li>
+                        <li>Rodney</li>
+                    </ol>
             </ol>
             <h2>This is a section H2 header</h2>
-            <a href="https://youtu.be/J---aiyznGQ">my favorite video</a>
+                <a href="https://youtu.be/J---aiyznGQ">My Favorite Video</a>
             <h3>This is the subsection H3 header</h3>
             <h4>This is the subsubsection H4 header</h4>
-							<img src="https://en.wikipedia.org/wiki/Nissan_GT-R#/media/File:Nissan_GT-R_GT3.jpg" alt="this is mine!">
+                <img src="my_gtr.jpg" alt="myGTR!">
         </body>
     </head>
 </html>
